# server/src/api/routes/posts/index.ts
@@ -1,4 +1,5 @@
 import { HttpStatus } from '../../../core/enums'
+import LikeService from '../../../core/services/LikeService'
 import PostService from '../../../core/services/PostService'
 import PostTransformer from '../../../core/transformers/PostTransformer'
 import AuthMiddlewareService from '../../middlewares/AuthMiddlewareService'
@@ -37,6 +38,38 @@ async function createPostHandler(req: Express.ExpressRequest): Promise<ApiRespon
   }
 }
 
+/**
+ * Retrieves the user's liked posts with pagination.
+ */
+async function getUserLikedPostsHandler(
+  req: Express.ExpressRequest
+): Promise<ApiResponse.PaginatedResponse<PostResource[]>> {
+  const userId = req.user?._id
+  const page = parseInt(req.query.page as string) || 1
+  const limit = parseInt(req.query.limit as string) || 10
+
+  const paginatedLikedPosts = await LikeService.getUserLikedPosts(userId, page, limit)
+  const data = PostTransformer.getViewList(paginatedLikedPosts.data)
+
+  return {
+    status: HttpStatus.OK,
+    ...paginatedLikedPosts,
+    data
+  }
+}
+
+/**
+ * Handles liking or unliking a post.
+ */
+async function likePostHandler(req: Express.ExpressRequest): Promise<{ status: HttpStatus }> {
+  const userId = req.user?._id
+  const postId = req.params.id
+
+  await LikeService.toggleLikePost(userId, postId)
+
+  return { status: HttpStatus.OK }
+}
+
 export default {
   getPostsPaginated: {
     name: 'getPostsPaginated',
@@ -46,6 +79,16 @@ export default {
   createPost: {
     name: 'createPost',
     handler: createPostHandler,
+    preOperationMiddlewares: [AuthMiddlewareService.isAuthenticated]
+  },
+  getUserLikedPosts: {
+    name: 'getUserLikedPosts',
+    handler: getUserLikedPostsHandler,
+    preOperationMiddlewares: [AuthMiddlewareService.isAuthenticated]
+  },
+  likePost: {
+    name: 'likePost',
+    handler: likePostHandler,
     preOperationMiddlewares: [AuthMiddlewareService.isAuthenticated]
   }
 }
